# voyage-atlas-api

./: .env  Cargo.toml  README.md
.github/workflows/: ci.yml
configuration/: base.yaml  development.yaml  local.yaml  production.yaml
migrations/: 20230723140453_add-users-table.sql  20230723141354_add-posts-table.sql  20230730220858_create-users-followers-table.sql  20230801214236_add-comments-table.sql  20230801224611_create-likes-table.sql
scripts/: init_db.sh  load_db.py
src/: main.rs
src/api/: configuration.rs  mod.rs  startup.rs
src/api/controller/: comments.rs  mod.rs  posts.rs  user.rs
src/api/database/: comments.rs  mod.rs  posts.rs  users.rs
src/api/models/: comments.rs  error.rs  mod.rs  posts.rs  token.rs  user.rs
src/api/routes/: comments.rs  health_check.rs  mod.rs  posts.rs  users.rs
tests/api/: comments.rs  health_check.rs  helpers.rs  main.rs  posts.rs  users.rs
