[package]
name = "voyage-atlas-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.3.4", features = ["serde", "v4"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
anyhow = "1.0.71"
config = "0.13.3"
serde-aux = "4.2.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-log = "0.1.3"
tracing-bunyan-formatter = "0.3.7"
validator = { version = "0.16", features = ["derive"] }
jsonwebtoken = "8.3.0"
pwhash = "1.0.0"
chrono = "0.4.26"

[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dependencies.reqwest]
version = "0.11.14"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
once_cell = "1"
fake = "2.6.1"
tokio = { version = "1", features = ["rt", "macros"] }
linkify = "0.10.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "voyage-atlas-api"
